// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create Today/Yesterday preview 1`] = `
<div
  className="DateFilterPreview"
>
  <ForwardRef
    className="parameterName"
    type="blue"
  >
    Start date
     
  </ForwardRef>
  <span
    className="filterText"
  >
    occurs
     
    <b>
      Today
    </b>
  </span>
</div>
`;

exports[`should create correct fixed date preview 1`] = `
<div
  className="DateFilterPreview"
>
  <ForwardRef
    className="parameterName"
    type="blue"
  >
    Start date
     
  </ForwardRef>
  <span
    className="filterText"
  >
    occurs
     
    between
     
    <b>
      2015-01-20
    </b>
     and
     
    <b>
      2019-05-11
    </b>
  </span>
</div>
`;

exports[`should create correct last... with custom preview 1`] = `
<div
  className="DateFilterPreview"
>
  <ForwardRef
    className="parameterName"
    type="blue"
  >
    End date
     
  </ForwardRef>
  <span
    className="filterText"
  >
    occurs
     
    in the last
     
    <b>
      5 months
    </b>
  </span>
</div>
`;

exports[`should create variable preview 1`] = `
<div
  className="DateFilterPreview"
>
  <ForwardRef
    className="parameterName"
    type="blue"
  />
  <span
    className="filterText"
  >
    <span>
       
      is
       
    </span>
    in the last
     
    <b>
      2 days
    </b>
    <span>
       
      or
       
    </span>
    <b>
      null
    </b>
    <span>
       
      or
       
    </span>
    <b>
      undefined
    </b>
  </span>
</div>
`;

exports[`should include time information if fixed date filter contains time info 1`] = `
<div
  className="DateFilterPreview"
>
  <ForwardRef
    className="parameterName"
    type="blue"
  >
    Start date
     
  </ForwardRef>
  <span
    className="filterText"
  >
    occurs
     
    between
     
    <b>
      2015-01-20 at 14:12
    </b>
     and
     
    <b>
      2019-05-11 at 19:24
    </b>
  </span>
</div>
`;
